--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Show.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Show.cshtml
@@ -30,7 +30,7 @@ Back to: @Html.ActionLink("Offer", "Show", "Offers", new { id = Model.OfferId },
             <td>@Html.DisplayFor(m => m.Summary)</td>
         </tr>
         <tr>
-            <td>@Html.LabelFor(m => m.Conclusion)</td>
+            <td>@Html.LabelFor(m => m.Conclusion, "Next Steps")</td>
             <td>@Html.DisplayFor(m => m.Conclusion)</td>
         </tr>
     </table>
