--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Index.cshtml
@@ -26,9 +26,11 @@ Drops:<br />
             eCPL: @(drop.CostPerLead.HasValue ? drop.CostPerLead.Value.ToString("C2") : "")
         </td>
         <td>@(drop.Cost.HasValue ? drop.Cost.Value.ToString("C2") : "")</td>
-        <td>@Html.ActionLink("Details", "Show", "CampaignDrops", new { id = drop.CampaignDropId }, null) |
-            @Html.ActionLink("Edit", "Edit", "CampaignDrops", new { id = drop.CampaignDropId }, null) |
-            @Html.ActionLink("Delete", "Delete", "CampaignDrops", new { id = drop.CampaignDropId }, new { onclick = "return confirm('Are you sure you want to delete this drop?')" })
+        <td>@Html.ActionLink("Details", "Show", "CampaignDrops", new { id = drop.CampaignDropId }, null)
+            | @Html.ActionLink("Edit", "Edit", "CampaignDrops", new { id = drop.CampaignDropId }, null)
+            @if (!drop.IsInCPMReport) {
+                <text>| </text>@Html.ActionLink("Delete", "Delete", "CampaignDrops", new { id = drop.CampaignDropId }, new { onclick = "return confirm('Are you sure you want to delete this drop?')" })
+            }
         </td>
     </tr>
     if (drop.CreativeStats.Count > 1)
