--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Campaigns/Show.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Campaigns/Show.cshtml
@@ -7,7 +7,7 @@ Campaign: @Model.CampaignName
 Affiliate: @Model.Affiliate.AffiliateName
 <br /><br />
 
-@Html.Partial("../CampaignDrops/Index", Model.CampaignDrops.OrderBy(d => d.Date))
+@Html.Partial("../CampaignDrops/Index", Model.CampaignDrops_Originals.OrderBy(d => d.Date))
 
 <br />
 @Html.ActionLink("New Drop", "Create", "CampaignDrops", new { campaignid = Model.CampaignId }, null)
