--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Index.cshtml
@@ -15,6 +15,10 @@ CPM Reports:
         <td>@report.DateSent</td>
         <td>@Html.ActionLink("View/Edit", "Show", "CPMReports", new { id = report.CPMReportId }, null)</td>
         <td>@Html.ActionLink("Preview", "Preview", "CPMReports", new { id = report.CPMReportId }, null)</td>
+        @if (report.CampaignDrops.Count == 0)
+        {
+            <td>@Html.ActionLink("Delete", "Delete", "CPMReports", new { id = report.CPMReportId }, new { onclick = "return confirm('Are you sure you want to delete this report?')" })</td>
+        }
     </tr>
 }
 </table>
