--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Index.cshtml
@@ -22,7 +22,7 @@
 @foreach (var offer in Model)
 {
     var reportsText = "reports (" + offer.CPMReports.Count + ")";
-    int numDrops = offer.Campaigns.Sum(c => c.CampaignDrops.Count);//.SelectMany(c => c.CampaignDrops).Count();
+    int numDrops = offer.AllCampaignDrops(null).Count();
     var dropsText = "drops (" + numDrops + ")";
     int numCampaigns = offer.Campaigns.Count;
     var campaignsText = "campaigns (" + numCampaigns + ")";
