--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Create.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/Create.cshtml
@@ -1,8 +1,11 @@
 ﻿@model ClientPortal.Data.Contexts.CPMReport
+@{
+    var ajaxOptions = RazorHelpers.GetAjaxOptions("cpmReportsTab", null, "Post");
+}
 
 <h3>Create Report</h3>
 
-@using (Ajax.BeginForm(new AjaxOptions { })) //UpdateTargetId =
+@using (Ajax.BeginForm(ajaxOptions))
 {
     @Html.ValidationSummary()
 
@@ -11,11 +14,11 @@
         @Html.HiddenFor(m => m.OfferId)
         <table>
             <tr>
-                <td>Advertiser</td>
+                <td>@Html.LabelFor(m => m.Offer.Advertiser.AdvertiserName, "Advertiser")</td>
                 <td>@Html.DisplayFor(m => m.Offer.Advertiser.AdvertiserName)</td>
             </tr>
             <tr>
-                <td>Offer</td>
+                <td>@Html.LabelFor(m => m.Offer.OfferName, "Offer")</td>
                 <td>@Html.DisplayFor(m => m.Offer.OfferName)</td>
             </tr>
             <tr>
@@ -26,7 +29,9 @@
 
         <br />
         <input type="submit" value="Create Report" />
-        &nbsp;
-        @Html.ActionLink("Cancel", "Show", "Offers", new { id = Model.OfferId }, null)
+        @if (!IsAjax)
+        {
+            <text>&nbsp;</text>@Html.ActionLink("Cancel", "Show", "Offers", new { id = Model.OfferId }, null)
+        }
     </fieldset>
 }
