fieldset/legend css update

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/CreateUserProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/CreateUserProfile.cshtml
@@ -11,7 +11,7 @@
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>UserProfile</legend>
+        <legend style="display:none"></legend>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.AdvertiserName)
