--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Delete.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h4>Delete</h4>
 
-<h5>Are you sure you want to delete this?</h5>
+<h5>Are you sure you want to delete this advertiser?</h5>
 <fieldset>
-    <legend>Advertiser</legend>
+    <legend style="display:none"></legend>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.AdvertiserId)
