--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Details.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Details.cshtml
@@ -9,10 +9,10 @@
     };
 }
 
-<h4>Details</h4>
+<h4>Advertiser Details</h4>
 
 <fieldset>
-    <legend>Advertiser</legend>
+    <legend style="display:none"></legend>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Logo)
