--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/EditContacts.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/EditContacts.cshtml
@@ -10,7 +10,7 @@
 {
     <input type="hidden" id="contactids" name="contactids" />
     <fieldset>
-        <legend>Advertiser</legend>
+        <legend style="display:none"></legend>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.AdvertiserName)
