--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Login.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Login.cshtml
@@ -77,7 +77,7 @@
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true)
             <fieldset class="loginfieldset">
-                <legend>Sign In</legend>
+                <legend style="display:none"></legend>
                 <div class="row">
                     <div class="twelve columns" style="text-align: center">
                         <h5>SIGN IN</h5>
