--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Index.cshtml
@@ -16,9 +16,9 @@
 <table>
     <tr>
         <th></th>
-        <th>@Ajax.ActionLink("Id", "Index", new { sort="AdvertiserId" }, ajaxOptions)</th>
+        <th style="text-align:center">@Ajax.ActionLink("Id", "Index", new { sort="AdvertiserId" }, ajaxOptions)</th>
         <th style="text-align:left; padding-left:10px">@Ajax.ActionLink("Advertiser", "Index", new { sort="AdvertiserName" }, ajaxOptions)</th>
-        <th>Login</th>
+        <th style="text-align:center">Login</th>
         <th>Culture</th>
         <th>ShowCPM?</th>
         <th>ConVal</th>
@@ -74,3 +74,4 @@
 }
 
 </table>
+<br />
