--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Delete.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h4>Delete</h4>
 
-<h3>Are you sure you want to delete this?</h3>
+<h5>Are you sure you want to delete this contact?</h5>
 <fieldset>
-    <legend>Contact</legend>
+    <legend style="display:none"></legend>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.ContactId)
