--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Details.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Details.cshtml
@@ -9,10 +9,10 @@
     };
 }
 
-<h4>Details</h4>
+<h4>Contact Details</h4>
 
 <fieldset>
-    <legend>Contact</legend>
+    <legend style="display:none"></legend>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.ContactId)
